# travel-agent

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt
.cloudbuild/: deploy-to-prod.yaml  deploy.yaml  pr_checks.yaml  staging.yaml
app/: __init__.py  agent.py  agent_engine_app.py  fast_api_app.py
app/agents/: __init__.py  travel_agent.py
app/app_utils/: __init__.py  services.py  telemetry.py  typing.py
app/models/: __init__.py  itinerary.py
app/tools/: __init__.py  country_tool.py  currency_tool.py  geocode_tool.py  places_tool.py  routing_tool.py  weather_tool.py
app/travel_agent/: __init__.py  prompts.py  sub_agents.py  travel_agent.py
app/ui/: app.py  export.py  main.py
deployment/terraform/cicd/: backend.tf  build_triggers.tf  variables.tf
deployment/terraform/cicd/vars/: env.tfvars
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
docs/: agentic_ai_lifecycle.md  implementation_plan.md  production_readiness_and_gcp_deployment.md
scripts/: deploy_agent_engine.py
src/: agent.py
src/agents/: travel_agent.py
src/models/: itinerary.py
src/tools/: __init__.py  geocode_tool.py  places_tool.py  weather_tool.py
src/ui/: app.py
tests/: test_agent.py  test_e2e_scenarios.py  test_multi_turn_flow.py  test_robustness_errors.py  test_tools.py  test_ui_exports.py
