[project]
name = "travel-agent"
version = "0.1.0"
description = "AI travel itinerary planner powered by Gemini on Vertex AI Agent Engine"
authors = [
    { name = "Sunil Kumar", email = "" },
]
requires-python = ">=3.10,<3.14"

dependencies = [
    # Core ADK + Vertex AI Agent Engine
    "google-adk>=1.15.0,<2.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.130.0",
    # Observability & Logging
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "protobuf>=6.31.1,<7.0.0",
    # Auth
    "google-auth>=2.0.0",
    # UI
    "streamlit>=1.35.0",
    "folium>=0.17.0",
    "streamlit-folium>=0.22.0",
    "fpdf2>=2.7.0",
    # Utilities (existing)
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "ruff>=0.4.6,<1.0.0",
]

eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]

jupyter = [
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501", "B006"]  # ignore line-too-long, mutable-arg-default

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
